--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <form id="formulario">
                 <label>Nombre de Usuario</label>
                 <input type="text" placeholder="Escribe tu nombre" />
-                <label>Contraseña</label>
+                <label>CONTRASENIA</label>
                 <input type="password" placeholder="Password"/>
                 <label>Selecciona</label>
                 <select>
